--- a/split/src/FriendList/Friends.css
+++ b/split/src/FriendList/Friends.css
@@ -1,3 +1,8 @@
-ul {
+.sidebar ul {
     background-color: #ffe8cc;
+    display: flex;
+    flex-direction: column;
+    gap: 0.4rem;
+    margin-bottom: 2rem;
+    /* font-size: 1.4rem; */
 }
